[gd_scene load_steps=3 format=2]

[ext_resource path="res://main/MainGame.gd" type="Script" id=1]
[ext_resource path="res://main/Field.tscn" type="PackedScene" id=2]

[node name="MainGame" type="Node2D"]
script = ExtResource( 1 )

[node name="HoldAndScore" type="VBoxContainer" parent="."]
margin_bottom = 40.0

[node name="Field" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 0 )

[node name="NextContainer" type="VBoxContainer" parent="."]
margin_left = 640.0
margin_right = 40.0
margin_bottom = 40.0

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
